<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_two"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qhn.bhne.footprinting.mvp.ui.activities.LoginActivity">



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y80"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"

                android:src="@mipmap/ic_account_circle_white_48dp" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="账号"

                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                     />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"

                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rec_refer_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentRight="true"
                    android:drawableLeft="@mipmap/ic_help_white_18dp"
                    android:drawablePadding="4dp"
                    android:text="@string/forgetPassword"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/alpha_85_white"
                    android:textSize="14sp" />
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_remember_password"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/txt_forget_password"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/rememberPassword"
                    android:textColor="@color/alpha_85_white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/txt_forget_password"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_login_in"
                    android:text="@string/action_sign_in"
                    android:layout_alignBaseline="@id/cb_remember_password"
                    android:textColor="@color/alpha_85_white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@null"
        android:drawableTop="@drawable/ic_grey_cut_line"
        android:text="@string/create_account"
        android:textColor="@color/alpha_85_white" />
</LinearLayout>
